samples/_failures_safe/1761604937_bbdd22_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_dc8d368f.c: In function ‘main’:
./samples/SAFE/__tmp_dc8d368f.c:131:9: error: expected declaration or statement at end of input
  131 |         if (!get_next_token(input, len, &pos, &line, &column, &token)) {
      |         ^~
./samples/SAFE/__tmp_dc8d368f.c:131:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_dc8d368f.c:131:9: error: expected declaration or statement at end of input
